--- a/src/css/order.css
+++ b/src/css/order.css
@@ -9,7 +9,8 @@ BODY {
 
    text-align: center;
    min-width: 680px; /*680*/
-	height: 100%;
+   height: 100%;
+   font-family: 'Roboto Condensed', sans-serif;
 }
 
 #page {
@@ -48,6 +49,10 @@ h1 {
 .table-row {
 	display: table-row;
    background-color: #eeeeee;
+}
+
+.table-row.hidden {
+    display: none;
 }
 
 .table-row:nth-child(even) {
@@ -145,4 +150,8 @@ h1 {
 
 .small {
    font-size: 18px;
+}
+
+#login-username-input {
+    font-family: 'Roboto Condensed', sans-serif;
 }
