--- a/src/css/order.css
+++ b/src/css/order.css
@@ -11,6 +11,7 @@ BODY {
    min-width: 680px; /*680*/
    height: 100%;
    font-family: 'Roboto Condensed', sans-serif;
+   font-size: 14px;
 }
 
 #page {
@@ -21,7 +22,7 @@ BODY {
 	text-align: center;
 	margin-left: auto;
 	margin-right: auto;
-   padding: 10px;
+	padding: 10px;
 
    background-color: white;
    box-shadow:0 0px 20px rgba(0, 0, 0, 1);
@@ -126,7 +127,7 @@ h1 {
 }
 
 .number-input {
-   width: 100px; //50
+   width: 100px;
    background-color: #a0d7d7;
 }
 .number-input-left {
