Breakpoints and dialog

--- a/src/scss/variables/_colors.scss
+++ b/src/scss/variables/_colors.scss
@@ -1,6 +1,8 @@
 // Base colors
 $color-white: #ffffff;
 $color-black: #000000;
+$color-red: #ff0000;
 
 // Other colors
 $color-overlay: rgba($color-black, 0.5);
+$color-error: $color-red;
