--- a/src/scss/modal.scss
+++ b/src/scss/modal.scss
@@ -1,34 +1,32 @@
-@import "variables/colors";
+@import "variables/variables";
 
 #page.modal-open {
 	filter: blur(5px);
 }
 
 #modal {
-	display: none;
+	//display: none;
+	opacity: 0;
 	position: fixed;
 	top: 0px;
 	bottom: 0px;
 	left: 0px;
 	right: 0px;
-
 	background-color: $color-overlay;
+	transition: opacity 0.1s linear;
+	pointer-events: none;
 
 	&::before {
 		filter: blur(5px);
 	}
 
 	&.open {
-		display: block;
+		//display: block;
+		opacity: 1;
+		pointer-events: auto;
 	}
 
 	.modal-box {
-		background-color: $color-white;
-		padding: 50px;
-
-		position: absolute;
-		top: 50%;
-		left: 50%;
 		transform: translate(-50%, -50%);
 	}
 }
