--- a/src/scss/dialog.scss
+++ b/src/scss/dialog.scss
@@ -6,12 +6,15 @@
 	min-width: 100%;
 	height: 100%;
 
-	position: absolute;
-	top: 50%;
-	left: 50%;
+	position: relative;
+	top: $menu-height;
+	left: 0;
 	box-shadow: 0 0 15px 0 $color-black ;
 
 	@include breakpoint-small {
+		position: absolute;
+		top: 50%;
+		left: 50%;
 		min-width: 200px;
 		height: auto;
 	}
@@ -27,6 +30,7 @@
 		background-color: lightseagreen; // temp!
 		color: $color-white;
 		padding: 0 10px;
+		font-size: 20px;
 
 		display: flex;
 		flex-direction: row;
@@ -59,10 +63,48 @@
 			@include breakpoint-small {
 				display: block;
 			}
+
+			div svg {
+				max-width: 100%;
+				fill: gray;
+			}
 		}
 
 		.dialog-content {
-			padding: 50px;
+			padding: 10px;
+			font-size: 30px;
+
+			@include breakpoint-small {
+				display: block;
+				font-size: 25px;
+			}
+
+			form {
+				label {
+					display: flex;
+					width: 100%;
+					flex-direction: column;
+					align-items: flex-start;
+				}
+				input {
+					height: 30px;
+					font-family: 'Roboto Condensed', sans-serif;
+					font-size: 20px;
+					padding-left: 10px;
+					-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+					-moz-box-sizing: border-box;    /* Firefox, other Gecko */
+					box-sizing: border-box;         /* Opera/IE 8+ */
+				}
+			}
 		}
+	}
+
+	.dialog-footer {
+		box-sizing: border-box;
+		width: 100%;
+		text-align: right;
+		background-color: brown;
+		align-items: center;
+		padding: 10px;
 	}
 }
