--- a/src/scss/dialog.scss
+++ b/src/scss/dialog.scss
@@ -2,7 +2,6 @@
 
 .dialog {
 	background-color: $color-white;
-	//padding: 50px;
 	min-width: 100%;
 	height: 100%;
 
@@ -26,11 +25,11 @@
 		top: 0px;
 		left: 0px;
 		width: 100%;
-		height: 40px;
+		height: 55px;
 		background-color: lightseagreen; // temp!
 		color: $color-white;
 		padding: 0 10px;
-		font-size: 20px;
+		font-size: 25px;
 
 		display: flex;
 		flex-direction: row;
@@ -42,7 +41,6 @@
 		}
 
 		.dialog-icon {
-			//float: right;
 			font-weight: 900;
 		}
 	}
@@ -56,9 +54,10 @@
 		.dialog-content-illustration {
 			display: none;
 			width: 100px;
+			min-width: 100px;
 			height: auto;
 			align-items: center;
-			background-color: lightgreen;
+			padding: 10px;
 
 			@include breakpoint-small {
 				display: block;
@@ -73,6 +72,7 @@
 		.dialog-content {
 			padding: 10px;
 			font-size: 30px;
+			text-align: left;
 
 			@include breakpoint-small {
 				display: block;
