--- a/src/scss/variables/_colors.scss
+++ b/src/scss/variables/_colors.scss
@@ -2,7 +2,10 @@
 $color-white: #ffffff;
 $color-black: #000000;
 $color-red: #ff0000;
+$color-gray: #dddddd;
+$color-gray-light: #eeeeee;
 
 // Other colors
 $color-overlay: rgba($color-black, 0.5);
 $color-error: $color-red;
+$color-button-background: $color-red;
