--- a/src/scss/dialog.scss
+++ b/src/scss/dialog.scss
@@ -85,6 +85,16 @@
 					width: 100%;
 					flex-direction: column;
 					align-items: flex-start;
+					transform: translate(0, 30px);
+					transition: all 0.15s linear;
+					pointer-events: none;
+					font-size: 20px;
+
+					&.above {
+						//transform: translate(-20px, -5px) scale(0.75);
+						transform: translate(-30px, 0) scale(0.75);
+						color: purple;
+					}
 				}
 				input {
 					height: 30px;
@@ -94,6 +104,11 @@
 					-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
 					-moz-box-sizing: border-box;    /* Firefox, other Gecko */
 					box-sizing: border-box;         /* Opera/IE 8+ */
+					background-color: $color-gray-light;
+
+					&:focus {
+						background-color: $color-gray;
+					}
 				}
 			}
 		}
@@ -103,8 +118,20 @@
 		box-sizing: border-box;
 		width: 100%;
 		text-align: right;
-		background-color: brown;
+		background-color: transparent;
 		align-items: center;
 		padding: 10px;
+
+		button {
+			font-size: 20px;
+			padding: 10px;
+			background: $color-gray-light;
+			border-radius: 3px;
+			transition: background-color 0.15s linear;
+
+			&:hover {
+				background: $color-gray;
+			}
+		}
 	}
 }
