Dialog and input styling

--- a/src/scss/menu.scss
+++ b/src/scss/menu.scss
@@ -33,6 +33,7 @@
 		font-family: 'Roboto Condensed', sans-serif;
 		font-size: 20px;
 		margin-right: 10px;
+		background-color: $color-white;
 	 
 		-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
 		-moz-box-sizing: border-box;    /* Firefox, other Gecko */
