--- a/src/scss/variables/_colors.scss
+++ b/src/scss/variables/_colors.scss
@@ -1,7 +1,8 @@
 // Base colors
 $color-white: #ffffff;
 $color-black: #000000;
-$color-red: #ff0000;
+$color-blue: #1473d2;
+$color-red: #d02c29;
 $color-gray: #dddddd;
 $color-gray-light: #eeeeee;
 
