--- a/src/scss/dialog.scss
+++ b/src/scss/dialog.scss
@@ -14,7 +14,8 @@
 		position: absolute;
 		top: 50%;
 		left: 50%;
-		min-width: 200px;
+		min-width: 500px;
+		width: 500px;
 		height: auto;
 	}
 
@@ -26,9 +27,9 @@
 		left: 0px;
 		width: 100%;
 		height: 55px;
-		background-color: lightseagreen; // temp!
+		background-color: $color-blue;
 		color: $color-white;
-		padding: 0 10px;
+		padding: 0 20px;
 		font-size: 25px;
 
 		display: flex;
@@ -57,7 +58,7 @@
 			min-width: 100px;
 			height: auto;
 			align-items: center;
-			padding: 10px;
+			padding: 20px;
 
 			@include breakpoint-small {
 				display: block;
@@ -70,7 +71,8 @@
 		}
 
 		.dialog-content {
-			padding: 10px;
+			width: 100%;
+			padding: 20px 20px 0 20px;
 			font-size: 30px;
 			text-align: left;
 
@@ -85,22 +87,23 @@
 					width: 100%;
 					flex-direction: column;
 					align-items: flex-start;
-					transform: translate(0, 30px);
+					transform: translate(10px, 40px);
+					transform-origin: 0px 0px;
 					transition: all 0.15s linear;
 					pointer-events: none;
 					font-size: 20px;
 
 					&.above {
-						//transform: translate(-20px, -5px) scale(0.75);
-						transform: translate(-30px, 0) scale(0.75);
-						color: purple;
+						transform: translate(10px, 30px) scale(0.75);
+						color: $color-blue;
 					}
 				}
 				input {
-					height: 30px;
+					width: 100%;
+					height: 60px;
 					font-family: 'Roboto Condensed', sans-serif;
 					font-size: 20px;
-					padding-left: 10px;
+					padding: 10px 10px 0 10px;
 					-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
 					-moz-box-sizing: border-box;    /* Firefox, other Gecko */
 					box-sizing: border-box;         /* Opera/IE 8+ */
@@ -120,7 +123,7 @@
 		text-align: right;
 		background-color: transparent;
 		align-items: center;
-		padding: 10px;
+		padding: 20px;
 
 		button {
 			font-size: 20px;
