--- a/src/scss/bg.scss
+++ b/src/scss/bg.scss
@@ -1,3 +1,5 @@
+@import "variables/variables";
+
 @keyframes spin {
 	from {
 		transform: rotate(360deg);
@@ -13,6 +15,8 @@ bottom: 0px;
 
 width: 837px;
 height: 700px;
+
+z-index: $zindex-bg;
 }
 
 #bg-top {
