--- a/src/scss/variables/_variables.scss
+++ b/src/scss/variables/_variables.scss
@@ -1,4 +1,5 @@
 @import "variables/breakpoints";
 @import "variables/colors";
+@import "variables/fonts";
 @import "variables/layouts";
 @import "variables/zindex";
