Number input, color variables

--- a/src/scss/menu.scss
+++ b/src/scss/menu.scss
@@ -69,4 +69,11 @@
 		vertical-align: middle;
 		display: inline-block;
 	}
+
+	.menu-greeting {
+		display: none;
+		@include breakpoint-medium {
+			display: inline;
+		}
+	}
 }
