--- a/src/scss/order.scss
+++ b/src/scss/order.scss
@@ -5,34 +5,37 @@ BODY {
 	background-repeat: no-repeat;
 	background-position: right bottom;
 	background-attachment: fixed;
-	padding-top: 80px;
-	padding-bottom: 400px;
+	padding-top: 55px;
+	padding-bottom: 200px;
 	margin: 0px;
  
 	text-align: center;
-	min-width: $screen-sm-min; //was 680px; //TODO: Fix
+	//min-width: $screen-sm-min; //was 680px; //TODO: Fix
 	height: 100%;
 	font-family: 'Roboto Condensed', sans-serif;
 	font-size: 14px;
 
-	@include breakpoint-small {
-		min-width: 680px; //TODO: Fix?
+	@include breakpoint-medium {
+		//min-width: 680px; //TODO: Fix?
+		padding-top: 80px;
+		padding-bottom: 400px;
 	}
  }
  
  #page {
 	position: relative;
-	width: $screen-sm-min;
+	width: 100%;
 	min-height: 100%;
 	height: auto;
 	text-align: center;
 	margin-left: 0;
 	margin-right: 0;
-	padding: 10px; 
+	padding: 0 10px 10px 10px;
 	background-color: $color-white;
 	box-shadow:0 0px 20px rgba(0, 0, 0, 1);
+	box-sizing: border-box;
 
-	@include breakpoint-small {
+	@include breakpoint-medium {
 		width: 680px;//$screen-md-min; TODO: Should this be like breakpoint?
 		margin-left: auto;
 		margin-right: auto;
@@ -43,6 +46,7 @@ BODY {
 	font-family: 'Roboto Condensed', sans-serif;
 	font-size: 24px;
 	font-weight: normal;
+	text-align: left;
  }
  
  /*
@@ -114,46 +118,11 @@ BODY {
 }
 */
 
-.thumb-container {
-	position: relative;
-	height: 100px;
-	width: 72px;
-	overflow: hidden;
-}
-
-.card-thumb {
-height: 100px;
-cursor: grab;
-}
-
 .red-tooltip {
 position: absolute;
 }
 .ui-helper-hidden-accessible {
 display:none;
-}
-
-.number-input {
-width: 100px;
-background-color: #a0d7d7;
-}
-.number-input-left {
-float: left;
-}
-.number-input-left INPUT {
-width: 50px;
-height: 95px;
-text-align: center;
-font-size: 25px;
-font-family: 'Roboto Condensed', sans-serif;
-}
-.number-input-right {
-float: left;
-padding-left: 5px;
-}
-.number-input-right INPUT {
-width: 30px;
-height: 50px;
 }
 
 .small {
