--- a/src/scss/table.scss
+++ b/src/scss/table.scss
@@ -4,6 +4,10 @@
 	display: flex;
 	flex-direction: column;
 
+	@include breakpoint-medium {
+		//display: block;
+	}
+
 	.table-row {
 		display: flex;
 		flex-direction: row;
@@ -11,7 +15,7 @@
 
 		&:nth-child(even) {
 			.table-cell {
-				background-color: #dddddd;
+				background-color: $color-gray;
 			}
 		}
 
@@ -24,6 +28,7 @@
 			top: 55px;
 			z-index: $zindex-sticky-row;
 			background-color: $color-white;
+			padding: 10px 0;
 		}
 
 		&.total-row {
@@ -36,22 +41,62 @@
 		.table-cell {
 			flex: 1 1;
 			flex-grow: 1;
+			box-sizing: border-box;
+			max-width: 90px; //95
+			height: 70px;
+			line-height: 50px;
+			font-size: 20px;
 
-			background-color: #eeeeee;
+			background-color: $color-gray-light;
 
 			margin: 2px;
 			padding: 10px;
-			font-size: 25px;
 			font-family: $font-roboto-condensed;
-			line-height: 25px;
 			vertical-align: middle;
 			text-align: center;
-			border-radius: 10px;
-			width: 70px;
+			border-radius: 3px;
+			//width: 70px;
 			overflow: hidden;
 
+			@include breakpoint-small {
+				//display: block;
+				max-width: 90px; //95
+				height: 120px;
+				line-height: 100px;
+				font-size: 25px;
+			}
+
+			&.short {
+				height: 50px;
+				line-height: 50px;
+				padding: 0px;
+				background-color: transparent;
+			}
+
+			&.thumb-container {
+				position: relative;
+				
+				overflow: hidden;
+				padding: 1px 2px;
+				background-color: $color-black;
+
+				.card-thumb {
+					width: 100%;
+					height: 100%;
+					cursor: grab;
+					object-fit: cover;
+					object-position: left bottom;
+					margin-top: 1px;
+
+					&.wide {
+						margin-top: 0px;
+						object-position: 1px 1px;
+					}
+				}
+			}
+
 			&.user-cell {
-				height: 40px;
+				//height: 50px;
 				background-size: cover;
 				background-position: center;
 
